<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.signup.SignUpFragment">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mainAppColor"
                android:paddingBottom="20dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.95" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.07" />

                <com.ewida.rickmorti.custom_view.AppHeader
                    android:id="@+id/appHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/guideline3" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="55dp"
                    android:text="@string/createAnAccount"
                    android:textColor="@color/textMainColor"
                    android:textSize="18sp"
                    android:fontFamily="@font/poppins_bold"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/appHeader" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/signUpDes"
                    android:textColor="@color/textSecondaryColor"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_regular"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <com.ewida.rickmorti.custom_view.MovieWorldEditText
                    android:id="@+id/emailEt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    app:boxDrawable="@drawable/done"
                    app:boxImage="@drawable/email"
                    app:boxLabel="@string/emailHint"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"
                    app:setInputType="32" />

                <com.ewida.rickmorti.custom_view.MovieWorldEditText
                    android:id="@+id/passwordEt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:boxImage="@drawable/lock"
                    app:boxLabel="@string/passwordHint"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/emailEt"
                    app:setInputType="0x00000081" />

                <com.ewida.rickmorti.custom_view.MovieWorldEditText
                    android:id="@+id/confirmPasswordEt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:boxImage="@drawable/lock"
                    app:boxLabel="@string/confirmPassHint"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/passwordEt"
                    app:setInputType="0x00000081"/>

                <CheckBox
                    android:id="@+id/rememberMeCheckBox"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:background="@drawable/_4_gray_rect"
                    android:buttonTint="@color/textSecondaryColor"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/policyTerms"
                    android:textColor="@color/textSecondaryColor"
                    android:textSize="11sp"
                    app:layout_constraintStart_toEndOf="@+id/rememberMeCheckBox"
                    app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEt" />

                <com.ewida.rickmorti.custom_view.MainBtn
                    android:id="@+id/loginBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:btnText="@string/createMyAccount"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/anotherOption"
                    android:textSize="11sp"
                    android:textColor="@color/textSecondaryColor"
                    android:fontFamily="@font/poppins_regular"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/loginWithGoogle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/_4_white_rect"
                    android:padding="13dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView7">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/google"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/createWithGoogle"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:textColor="@color/textThirdColor"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/loginWithFacebook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/_4_white_rect"
                    android:padding="13dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/loginWithGoogle">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/facebook"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@string/createWithFacebook"
                        android:textColor="@color/textThirdColor"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textview8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/doYouHaveAccount"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="11sp"
                    android:textColor="@color/textSecondaryColor"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/loginWithFacebook" />

                <TextView
                    android:id="@+id/loginMyAccTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/loginYourAccount"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="11sp"
                    android:textColor="@color/textThirdColor"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textview8"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>